# syn

./: .gitignore  .pre-commit-config.yaml  .python-version  Cargo.toml  LICENSE  Makefile  README.md  requirements.in  requirements.txt  tests.py
.github/: dependabot.yml
.github/workflows/: python.yml  rust.yml
benches/: clifford_tableau.rs  connectivity.rs
examples/: Basic python usage.ipynb  Rust library overview.ipynb  em4qs demo.ipynb  plot_data_structure.rs  print_data_structure.rs
src/: architecture.rs  data_structures.rs  datastructures.rs  ir.rs  lib.rs  synthesis_methods.rs
src/architecture/: complete.rs  connectivity.rs  line.rs
src/data_structures/: clifford_tableau.rs  pauli_polynomial.rs  pauli_string.rs  pauli_vec.rs
src/datastructures/: clifford_tableau.rs  pauli_polynomial.rs  pauli_string.rs
src/ir/: clifford_tableau.rs  pauli_exponential.rs  pauli_polynomial.rs
src/ir/clifford_tableau/: custom_callback.rs  custom_pivots.rs  helper.rs  naive.rs  permrowcol.rs
src/ir/pauli_exponential/: naive.rs
src/ir/pauli_polynomial/: helper.rs  naive.rs
src/synthesis_methods/: custom.rs  naive.rs
synir/: Cargo.toml
synir/benches/: clifford_tableau.rs  connectivity.rs
synir/examples/: print_data_structure.rs
synir/src/: architecture.rs  data_structures.rs  ir.rs
synir/src/architecture/: connectivity.rs
synir/src/data_structures/: angle.rs  clifford_tableau.rs  pauli_exponential.rs  pauli_polynomial.rs  pauli_string.rs
synir/src/data_structures/pauli_polynomial/: simplify.rs
synir/src/ir/: clifford_tableau.rs  helper.rs  pauli_exponential.rs  pauli_polynomial.rs
synir/src/ir/clifford_tableau/: custom_callback.rs  helper.rs  naive.rs  permrowcol.rs
synir/src/ir/pauli_polynomial/: helper.rs  naive.rs  psgs.rs
synir/tests/: clifford_tableau.rs  common.rs  ct_synthesis_tests.rs  pauli_exponential.rs  pauli_polynomial.rs  pe_synthesis_tests.rs  permrowcol.rs  pp_synthesis_tests.rs
synir/tests/common/: mock_circuit.rs  mod.rs  sample_clifford_tableaus.rs  sample_pauli_poly.rs
synir/tests/ct_synthesis/: ct_compose.rs  custom_callback.rs  mod.rs  naive.rs  naive_adjoint.rs  permrowcol_complete.rs  permrowcol_line.rs
synir/tests/pp_synthesis/: mod.rs  naive.rs  psgs.rs
synpy/: Cargo.toml  README.md  pyproject.toml  qiskit.py  requirements.in  requirements.txt  setup.py
synpy/integration_tests/: test_pauliopt.py  test_qiskit.py
synpy/python/synpy/: synpy_rust.pyi  utils.py
synpy/python/synpy/pauliopt/: synthesizer.py
synpy/python/synpy/qiskit/: plugin.py
synpy/src/: lib.rs  qiskit.rs  synthesis.rs  tableau.rs  validation.rs  wrapper.rs
synpy/src/wrapper/: qiskit.rs
synpy/synpy_core/: Cargo.toml  pyproject.toml
synpy/synpy_core/python/synpy_core/: utils.py
synpy/synpy_core/src/: synthesis.rs
tests/: clifford_tableau.rs  common.rs  pauli_exponential.rs  pauli_polynomial.rs
tests/common/: sample_pauli_poly.rs
tests/pp_synthesis/: naive.rs
