[package]
name = "syn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
bitvec = "1.0.1"
itertools = "0.13.0"
petgraph = { git = "https://github.com/daehiff/petgraph", branch = "add-mst-prim" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "clifford_tableau"
harness = false
