[package]
name = "synir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitvec = "1.0.1"
itertools = "0.13.0"
petgraph = { version = "0.8.2", features = ["stable_graph"], git = "https://github.com/keefehuang/petgraph" }
typenum = "1.17.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
name = "clifford_tableau"
harness = false
