[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "synpy_core"
version = "0.1.0"

[tool.maturin]
python-source = "python"
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "synpy_core.synpy_rust"
include = [{ path = "path/**/*", format = "sdist" }]